# chemspacecopilot

./: .env.example  .gitignore  .modelconf  CLAUDE.md  Dockerfile  README.md  chainlit_app.py  docker-compose.cpu.yml  docker-compose.yml  docker-entrypoint.sh  docker-start.sh  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/architecture/: agents.md  storage.md  tools.md
docs/getting-started/: installation.md
docs/testing/: robustness.md
examples/: autoencoder_integration_demo.py
src/cs_copilot/: cli.py  model_config.py
src/cs_copilot/agents/: __init__.py  config.py  factories.py  prompts.py  teams.py
src/cs_copilot/storage/: __init__.py  client.py  config.py  layout.py
src/cs_copilot/tools/: __init__.py  constants.py
src/cs_copilot/tools/analysis/: robustness_toolkit.py
src/cs_copilot/tools/chemistry/: __init__.py  activity_schema.py  autoencoder_toolkit.py  base_chemistry.py  clean_dataset.py  descriptors.py  mmpa_toolkit.py  molecular_designer_toolkit.py  peptide_designer_toolkit.py  peptide_wae_toolkit.py  smiles_columns.py  standardize.py  synplanner_toolkit.py
src/cs_copilot/tools/chemography/: __init__.py  gtm.py  gtm_operations.py
src/cs_copilot/tools/databases/: __init__.py  chembl.py  chembl_fetcher.py
src/cs_copilot/tools/io/: figure_metadata.py  pointer_pandas_tools.py  report_export.py  session_memory.py
src/cs_copilot/utils/: __init__.py  resources.py
tests/: README.md
tests/robustness/: README.md  robustness_config.yaml  robustness_minimal_example.py  test_autoencoder_robustness.py  test_chembl_interactivity.py  test_utils.py
tests/robustness/fixtures/: prompt_templates.yaml  prompt_templates_short.yaml
tests/unit/: README.md  test_activity_schema.py  test_agent_team_memory.py  test_autoencoder.py  test_clean_dataset.py  test_gtm_plots.py  test_gtm_preprocessing_cache.py  test_gtm_sampling.py  test_model_config.py  test_molecular_designer.py  test_morgan_fp_batch.py  test_peptide_designer.py  test_pointer_pandas_tools.py  test_report_export.py  test_report_instructions.py  test_resources.py  test_robustness_utils.py  test_session_memory.py  test_smiles_column_detection.py  test_standardization_instructions.py  test_standardize.py  test_storage.py  test_synplanner_toolkit.py
tests/unit/test_databases/: test_base.py  test_chembl.py  test_chembl_sql.py
